# kafka-wikimedia-recent-changes

./: .dockerignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
code/consumer/: app.py  pyproject.toml
code/consumer/rcc_utils/schema/: schema.py
code/consumer/rcc_utils/transformations/: transform.py
code/producer/: app.py  pyproject.toml
code/producer/rcp_utils/kafka/: produce_data.py
docker/: producer.Dockerfile
src/consumer/main/: recent_changes_consumer.py
src/producer/: playground.py  pyproject.toml
src/producer/main/: recent_changes_producer.py
src/producer/recent_changes_producer/: app.py
src/producer/utils/api/: api_utils.py
src/producer/utils/kafka/: get_uri.py  produce_data.py
tests/events/: event.json
