[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-recent-changes-test"
version = "0.1"
authors = [
    {name = "Daniel Taylor", email = "danieltaylorr97@gmail.com"},
]
description = "Stream wikimedia recent changes into local kafka topics."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3"
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["src", "src.producer", "src.producer.main", "src.producer.utils", "src.producer.utils.api", "src.producer.utils.kafka"]