[tool.poetry]
name = "rcc_utils"
version = "0.1.0"
description = "Consumer that pulls data from a local kafka topic & saves the data as parquet in S3."
authors = ["dantaylrr <dannyyyyt@gmail.com>"]
readme = "README.md"

packages = [
    { include = "rcc_utils" }
]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pre-commit = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
