[tool.poetry]
name = "rcp_utils"
version = "1.0.0"
description = "Producer that pulls wikimedia recent changes and publishes each event to a local kafka topic."
authors = ["dantaylrr <dannyyyyt@gmail.com>"]
readme = "README.md"

packages = [
    { include = "rcp_utils" }
]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "2.2.0"
requests = "2.26.0"
sseclient-py = "1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pre-commit = "^3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
