[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-recent-changes-producer"
version = "0.1"
authors = [
    {name = "Daniel Taylor", email = "danieltaylorr97@gmail.com"},
]
description = "Stream wikimedia recent changes into local kafka topics."
requires-python = ">=3.9.5"
classifiers = [
    "Programming Language :: Python :: 3"
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["producer", "producer.main", "producer.utils", "producer.utils.api", "producer.utils.kafka"]