[tool.poetry]
name = "recent-changes-producer"
version = "0.1.0"
description = "Producer that pulls wikimedia recent changes and publishes each event to a local kafka topic."
authors = ["Daniel Taylor <dannyyyyt@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
recent-changes-producer = "recent_changes_producer.app:main"

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "2.2.0"
requests = "2.26.0"
sseclient-py = "1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
